terraform/aws/main.tf
# ------------------------------------------------------------------------
# Deploy an instance of the DORIS Digital Platform in AWS.
# For more information: https://github.com/nycrecords/thelma
# ------------------------------------------------------------------------

# Configure Terraform Provider
provider "aws" {
  region     = "${var.aws_region}"
  access_key = "${var.aws_access_key}"
  secret_key = "${var.aws_secret_key}"
}
# Configure Terraform Remote State 
terraform {
  backend "remote" {
    hostname     = "${var.remote_state_hostname}"
    organization = "${var.remote_state_organization}"
    workspaces {
      name = "${var.remote_state_workspace_name}"
    }
  }
}
resource "aws_vpc" "thelma-dev-joel" {
  cidr_block           = "${var.cidr_range}"
  enable_dns_hostnames = true
  tags {
    Name = "${var.prefix}-vpc"
  }
}
resource "aws_internet_gateway" "thelma-dev-joel-gateway" {
  vpc_id = "${aws_vpc.thelma-dev-joel.id}"
}
resource "aws_subnet" "thelma-dev-joel-subnet" {
  vpc_id            = "${aws_vpc.thelma-dev-joel.id}"
  availability_zone = "us-east-1b"
  cidr_block        = "${cidrsubnet(aws_vpc.thelma-dev-joel.cidr_block, 4, 1)}"
}
resource "aws_route_table" "thelma-dev-joel-route_table" {
  vpc_id = "${aws_vpc.thelma-dev-joel.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.thelma-dev-joel-gateway.id}"
  }
  tags {
    Name = "Public Subnet"
  }
}
resource "aws_route_table_association" "thelma-dev-joel-route_association" {
  subnet_id      = "${aws_subnet.thelma-dev-joel-subnet.id}"
  route_table_id = "${aws_route_table.thelma-dev-joel-route_table.id}"
}
resource "aws_security_group" "allow_all" {
  name        = "allow_all"
  description = "Allow all inbound traffic"
  vpc_id      = "${aws_vpc.thelma-dev-joel.id}"
  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_key_pair" "thelma-dev-joel-keys" {
  key_name   = "${var.prefix}-keys"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDsDr5ftf168jwO99GYCL1+d/XtiV1hFkv+AIGKYIPF77V4kZSfj1bErU3khTUhQiRpvHc0I6S2tg4o54V/tUMbrGPEAfg+8n9KZARwTW50dRaO4DHAL0x4iwm60jyD03pg1CwRiNHDtAkX5WiqN6i7uVtfrTQ0T3QEqB9Dzh2IxeHW83V3KTWMQpW+EgtRK588hhCvSSF/VmT6sWgYaMJeVjfeidcsue3UYnWs0MJvPhqYMFSHCM5NsXbnPWsR2JqQYPP1P9r5+uI257evmKQWeExEWjlG+Vlz7DyXqjn+V0VShbhTjcggpidJnwCs6M/Xlutr/Ru263h/oqX7Esl9"
}
resource "aws_s3_bucket" "thelma-dev-joel-assets" {
  bucket = "${var.prefix}-assets"
  acl    = "public-read"
}
resource "aws_s3_bucket" "thelma-dev-joel-uploads" {
  bucket = "${var.prefix}-uploads"
  acl    = "public-read"
}
data "aws_ami" "base" {
  most_recent = true
  filter {
    name   = "name"
    values = ["doris-hyku-base-centos*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["self"]
}
data "aws_ami" "storage" {
  most_recent = true
  filter {
    name   = "name"
    values = ["doris-hyku-storage-centos*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["self"]
}
data "aws_ami" "hyku" {
  most_recent = true
  filter {
    name   = "name"
    values = ["doris-hyku-hyku-centos*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["self"]
}
data "aws_ami" "archivematica" {
  most_recent = true
  filter {
    name   = "name"
    values = ["doris-hyku-archivematica-centos*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["self"]
}
resource "aws_instance" "storage" {
  ami           = "${data.aws_ami.storage.id}"
  instance_type = "m5.xlarge"
  #disable_api_termination = true
  key_name                    = "${var.prefix}-keys"
  vpc_security_group_ids      = ["${aws_security_group.allow_all.id}"]
  subnet_id                   = "${aws_subnet.thelma-dev-joel-subnet.id}"
  associate_public_ip_address = true
  root_block_device = {
    volume_size = "1000" # 1TB
  }
  tags {
    Name = "storage-1"
    Type = "storage"
  }
}
resource "aws_instance" "hyku" {
  ami           = "${data.aws_ami.hyku.id}"
  instance_type = "m5.large"
  #disable_api_termination = true
  key_name                    = "${var.prefix}-keys"
  vpc_security_group_ids      = ["${aws_security_group.allow_all.id}"]
  subnet_id                   = "${aws_subnet.thelma-dev-joel-subnet.id}"
  associate_public_ip_address = true
  root_block_device = {
    volume_size = "500" # 10TB
  }
  tags {
    Name = "hyku-1"
    Type = "hyku"
  }
}
resource "aws_instance" "archivematica" {
  ami           = "${data.aws_ami.archivematica.id}"
  instance_type = "m5.large"
  #disable_api_termination = true
  key_name                    = "${var.prefix}-keys"
  vpc_security_group_ids      = ["${aws_security_group.allow_all.id}"]
  subnet_id                   = "${aws_subnet.thelma-dev-joel-subnet.id}"
  associate_public_ip_address = true
  root_block_device = {
    volume_size = "1000" # 1TB
  }
  tags {
    Name = "archivematica-1"
    Type = "archivematica"
  }
}
# resource "aws_lb_target_group_attachment" "frontent_http" {
#   target_group_arn = "${aws_lb_target_group.alb_front_http.arn}"
#   target_id        = "${aws_instance.hyku.id}"
#   port             = 80
# }
resource "aws_route53_record" "doris-db" {
  zone_id = "Z37PTQKK7X14DM"
  name    = "services-db.thelma-dev-joel.getinfo.nyc"
  type    = "A"
  ttl     = "300"
  records = ["${aws_instance.storage.private_ip}"]
}
resource "aws_route53_record" "doris-db-ext" {
  zone_id = "Z37PTQKK7X14DM"
  name    = "services-db-ext.thelma-dev-joel.getinfo.nyc"
  type    = "A"
  ttl     = "300"
  records = ["${aws_instance.storage.public_ip}"]
}
resource "aws_route53_record" "doris-hyku" {
  zone_id = "Z37PTQKK7X14DM"
  name    = "hyku.thelma-dev-joel.getinfo.nyc"
  type    = "A"
  ttl     = "300"
  records = ["${aws_instance.hyku.public_ip}"]
}
resource "aws_route53_record" "doris-archivematica" {
  zone_id = "Z37PTQKK7X14DM"
  name    = "archivematica.thelma-dev-joel.getinfo.nyc"
  type    = "A"
  ttl     = "300"
  records = ["${aws_instance.archivematica.public_ip}"]
}
